2007-07-31  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/ConversationManager.cs: fixes for bi-directional text chat
	  startup
	* Banter/Conversation.cs: small fixes to support bidirectional text
	  chat startup

2007-07-31  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/Person.cs: Fixed the initial status setting
	* Banter/GroupWindow.cs: Updated to show the avatar

2007-07-31  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/ChatWindow.cs: Removed the show contact details button...
	  there is none to show

2007-07-31  Calvin Gaisford <calvinrg@gmail.com> 

	* configure.ac, Banter/NotificationManager.cs, Banter/PersonGroup.cs,
	  Banter/ChatWindowManager.cs, Banter/Person.cs,
	  Banter/ChatWindow.cs, Banter/AvatarManager.cs,
	  Banter/GroupWindow.cs, Banter/PersonManager.cs,
	  Banter/PersonView.cs, Banter/PersonSync.cs, Banter/Makefile.am:
	  removed evolution integration
	* Banter/Application.cs: Moved window creation to happen right away

2007-07-18  Calvin Gaisford <calvinrg@gmail.com> 

	* configure.ac: bumped version for 0.1.9 iteration

2007-07-18  Calvin Gaisford <calvinrg@gmail.com> 

	* NEWS: Updated for new release 0.1.8

2007-07-17  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/Conversation.cs: added video stop message

2007-07-17  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/ChatWindow.cs: updated the window size

2007-07-17  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/MessagesView.cs: Fixed scrolling (actually Boyd did this)

2007-07-17  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter.mdp: Removed unused references
	* Banter/Account.cs: removed long debug messages
	* Banter/ChatWindow.cs, Banter/GroupWindow.cs: fixed up icon
	* Banter/PersonManager.cs: removed too many debug messages
	* Banter/PersonView.cs: removed debug messages

2007-07-17  Calvin Gaisford <calvinrg@gmail.com> 

	* test, test/TelepathyTest, test/TelepathyTest/AssemblyInfo.cs,
	  test/TelepathyTest/TelepathyTest.usertasks,